Hadoop Change Log

Release 1.3.0 - unreleased

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    HADOOP-9450. HADOOP_USER_CLASSPATH_FIRST is not honored; CLASSPATH
    is PREpended instead of APpended. (Chris Nauroth and harsh via harsh)

  BUG FIXES

    MAPREDUCE-5047. keep.failed.task.files=true causes job failure on 
    secure clusters. (sandyr via tucu)

    MAPREDUCE-5070. TestClusterStatus.testClusterMetrics fails on JDK7. 
    (sandyr via tucu)

    MAPREDUCE-5072. TestDelegationTokenRenewal.testDTRenewal fails in MR1 
    on jdk7. (sandyr via tucu)

    MAPREDUCE-5073. TestJobStatusPersistency.testPersistency fails on 
    JDK7. (sandyr via tucu)

    HDFS-4622. Remove redundant synchronized from 
    FSNamesystem#rollEditLog in branch-1. (Jing Zhao via suresh)

    HDFS-4581. DataNode.checkDiskError should not be called on network errors.
    (Rohit Kochar via kihwal)

    MAPREDUCE-2817. MiniRMCluster hardcodes 'mapred.local.dir' configuration 
    to 'build/test/mapred/local'. (rkanter via tucu)

    MAPREDUCE-5133. TestSubmitJob.testSecureJobExecution is flaky due to job 
    dir deletion race. (sandyr via tucu)

    HDFS-4699. Additional conditions for avoiding unnecessary 
    DataNode.checkDiskError calls. (Chris Nauroth via kihwal)

    MAPREDUCE-5218. Annotate (comment) internal classes as Private. 
    (kkambatl via tucu)

    MAPREDUCE-5217. Fix DistCP to work when launched by Oozie on a secure
    cluster. (Venkat Ranganathan via sseth)

Release 1.2.1 - Unreleased 

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

  BUG FIXES

    MAPREDUCE-5206. Ensure that a job doesn't get added to RetiredJobs
    multiple times in JobTracker. (acmurthy)

    MAPREDUCE-5148. Fix MAPREDUCE-4970 to ensure task-log4j.properties is
    available for previous installs by putting it in hadoop-core.jar.
    (acmurthy)

Release 1.2.0 - 2013.05.05

  INCOMPATIBLE CHANGES

    HDFS-4350. Make enabling of stale marking on read and write paths